fix overflow bug

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 article,
